--- a/wall/CMakeLists.txt
+++ b/wall/CMakeLists.txt
@@ -47,7 +47,8 @@ target_link_libraries(${EXAMPLE_BINARY} PRIVATE
 
 
 add_executable(${OTHER_SERVICE} other_main.cpp
-        web_server/http_web_server.h)
+        web_server/http_web_server.h
+)
 target_include_directories(${OTHER_SERVICE} PRIVATE "${CMAKE_BINARY_DIR}")
 target_compile_options(${OTHER_SERVICE} PRIVATE -Wall -Wextra -pedantic -Werror )
 set_target_properties(${OTHER_SERVICE} PROPERTIES LINKER_LANGUAGE CXX)
