--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -7,12 +7,13 @@ WORKDIR /root
 #RUN git clone https://github.com/buliginkirill/Coursework-test.git
 RUN cd Coursework-test/chat && mkdir build && cd build && cmake .. && make && cd ../../..
 
-ENV DB_HOST=192.168.100.173
-ENV DB_PORT=3306
-ENV DB_LOGIN=stud
-ENV DB_PASSWORD=stud
-ENV DB_DATABASE=service
+#ENV DB_HOST=192.168.100.173
+#ENV DB_PORT=3306
+#ENV DB_LOGIN=stud
+#ENV DB_PASSWORD=stud
+#ENV DB_DATABASE=service
 
 ENV LD_LIBRARY_PATH=/usr/local/lib
 EXPOSE 8080
 ENTRYPOINT ./Coursework-test/chat/build/chat
+#ENTRYPOINT /bin/bash
