--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -4,7 +4,8 @@ FROM ubuntu-poco
 WORKDIR /root
 #RUN git clone -b poco-1.11.7-release https://github.com/pocoproject/poco.git
 #RUN cd poco && mkdir cmake-build && cd cmake-build && cmake .. && make && make install && cd .. && cd ..
-#RUN git clone https://github.com/buliginkirill/Coursework-test.git
+
+RUN git clone https://github.com/buliginkirill/Coursework-test.git
 RUN cd Coursework-test/chat && mkdir build && cd build && cmake .. && make && cd ../../..
 
 #ENV DB_HOST=192.168.100.173
