--- a/Dockerfile_poco
+++ b/Dockerfile_poco
@@ -4,4 +4,4 @@ RUN apt-get -y install cmake make git build-essential libssl-dev mysql-client li
 WORKDIR /root
 RUN git clone -b poco-1.11.7-release https://github.com/pocoproject/poco.git
 RUN cd poco && mkdir cmake-build && cd cmake-build && cmake .. && make && make install && cd .. && cd ..
-RUN git clone https://github.com/buliginkirill/Coursework-test.git
+#RUN git clone https://github.com/buliginkirill/Coursework-test.git
