--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,11 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: "/usr/bin/mariadb --user=user --password=password --execute \"SHOW DATABASES;\""
+      interval: 15s
+      timeout: 1s
+      retries: 5
   chat:
     image: chat
     container_name: chat_service
@@ -37,7 +42,8 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      - mariadb
+      mariadb:
+        condition: service_healthy
     ports:
       - "9001:8080"
     networks:
@@ -58,7 +64,8 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      - mariadb
+      mariadb:
+        condition: service_healthy
     networks:
       - my_network
     ports:
@@ -79,7 +86,8 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      - mariadb
+      mariadb:
+        condition: service_healthy
     networks:
       - my_network
     ports:
