--- a/Dockerfile_poco
+++ b/Dockerfile_poco
@@ -1,7 +1,8 @@
 FROM ubuntu
 
 RUN apt-get -y update
-RUN apt-get -y install cmake make git build-essential libssl-dev mysql-client libmysqlclient-dev zlib1g-dev
+RUN apt-get -y install --fix-missing
+RUN apt-get -y install --fix-missing cmake make git build-essential libssl-dev mysql-client zlib1g-dev libmariadb-dev
 
 WORKDIR /root
 RUN git clone -b poco-1.11.7-release https://github.com/pocoproject/poco.git
