--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 networks:
   my_network:
+
 services:
   ubuntu-poco:
     image: ubuntu-poco
@@ -7,15 +8,16 @@ services:
       context: .
       dockerfile: Dockerfile_poco
     command: /bin/true
-  mariadb:
+
+  mariadb-1:
     image: mariadb_server
     build:
       context: ./mariadb
       dockerfile: Dockerfile
-    container_name: db_server
+    container_name: db_server_1
     restart: always
     ports:
-      - "9000:3306"
+      - "9010:3306"
     networks:
       - my_network
     environment:
@@ -28,6 +30,77 @@ services:
       interval: 15s
       timeout: 1s
       retries: 5
+
+  mariadb-2:
+    image: mariadb_server
+    build:
+      context: ./mariadb
+      dockerfile: Dockerfile
+    container_name: db_server_2
+    restart: always
+    ports:
+      - "9011:3306"
+    networks:
+      - my_network
+    environment:
+      MYSQL_DATABASE: db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: "/usr/bin/mariadb --user=user --password=password --execute \"SHOW DATABASES;\""
+      interval: 15s
+      timeout: 1s
+      retries: 5
+
+  mariadb-3:
+    image: mariadb_server
+    build:
+      context: ./mariadb
+      dockerfile: Dockerfile
+    container_name: db_server_3
+    restart: always
+    ports:
+      - "9012:3306"
+    networks:
+      - my_network
+    environment:
+      MYSQL_DATABASE: db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+    healthcheck:
+      test: "/usr/bin/mariadb --user=user --password=password --execute \"SHOW DATABASES;\""
+      interval: 15s
+      timeout: 1s
+      retries: 5
+
+  proxysql:
+    image: proxysql
+    build:
+      context: ./proxysql
+      dockerfile: Dockerfile
+    container_name: proxysql
+#    command: >
+#      --initial
+#    volumes:
+#      - proxysql-data:/var/lib/proxysql
+    healthcheck:
+      test: "/usr/bin/mysql --user=user --password=password --execute \"SHOW DATABASES;\""
+      timeout: 20s
+      retries: 5
+    networks:
+      - my_network
+    ports:
+      # Mysql Client Port
+      - "9020:6033"
+      # Mysql Admin Port
+      - "9021:6032"
+    depends_on:
+      - mariadb-1
+      - mariadb-2
+      - mariadb-3
+
   chat:
     image: chat
     container_name: chat_service
@@ -42,14 +115,15 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      mariadb:
+      proxysql:
         condition: service_healthy
     ports:
       - "9001:8080"
     networks:
       - my_network
     links:
-      - mariadb:database_server
+      - proxysql:database_server
+
   wall:
     image: wall
     container_name: wall_service
@@ -64,14 +138,15 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      mariadb:
+      proxysql:
         condition: service_healthy
     networks:
       - my_network
     ports:
       - "9002:8080"
     links:
-      - mariadb:database_server
+      - proxysql:database_server
+
   user:
     image: user
     container_name: user_service
@@ -86,11 +161,11 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      mariadb:
+      proxysql:
         condition: service_healthy
     networks:
       - my_network
     ports:
       - "9003:8080"
     links:
-      - mariadb:database_server
+      - proxysql:database_server
