--- a/Dockerfile_poco
+++ b/Dockerfile_poco
@@ -2,7 +2,7 @@ FROM ubuntu
 
 RUN apt-get -y update
 RUN apt-get -y install --fix-missing
-RUN apt-get -y install --fix-missing cmake make git build-essential libssl-dev mysql-client zlib1g-dev libmariadb-dev
+RUN apt-get -y install --fix-missing cmake make git build-essential libssl-dev mysql-client zlib1g-dev libmysqlclient-dev
 
 WORKDIR /root
 RUN git clone -b poco-1.11.7-release https://github.com/pocoproject/poco.git
