--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,6 +101,23 @@ services:
       - mariadb-2
       - mariadb-3
 
+  python_loader:
+    image: py
+    build:
+      context: ./test 
+      dockerfile: Dockerfile
+    container_name: python_loader
+    command: "populate_db.py"
+    healthcheck:
+      test: "/root/Coursework-test/test/venv/bin/python3 /root/Coursework-test/test/healthcheck.py"
+      timeout: 5s
+      retries: 20
+    networks:
+      - my_network
+    depends_on:
+      proxysql:
+        condition: service_healthy
+
   chat:
     image: chat
     container_name: chat_service
@@ -115,7 +132,7 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      proxysql:
+      python_loader:
         condition: service_healthy
     ports:
       - "9001:8080"
@@ -138,7 +155,7 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      proxysql:
+      python_loader:
         condition: service_healthy
     networks:
       - my_network
@@ -161,7 +178,7 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
     depends_on: 
-      proxysql:
+      python_loader:
         condition: service_healthy
     networks:
       - my_network
