--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -108,81 +108,78 @@ services:
       dockerfile: Dockerfile
     container_name: python_loader
     command: "populate_db.py"
-    healthcheck:
-      test: "/root/Coursework-test/test/venv/bin/python3 /root/Coursework-test/test/healthcheck.py"
-      timeout: 5s
-      retries: 20
     networks:
       - my_network
+    restart: "no"
     depends_on:
       proxysql:
         condition: service_healthy
 
-  chat:
-    image: chat
-    container_name: chat_service
-    restart: always
-    build:
-      context: ./chat
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-    depends_on: 
-      python_loader:
-        condition: service_healthy
-    ports:
-      - "9001:8080"
-    networks:
-      - my_network
-#    links:
-#      - proxysql:database_server
+#   chat:
+#     image: chat
+#     container_name: chat_service
+#     restart: always
+#     build:
+#       context: ./chat
+#       dockerfile: Dockerfile
+#     environment:
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#     ports:
+#       - "9001:8080"
+#     networks:
+#       - my_network
+# #    links:
+# #      - proxysql:database_server
 
-  wall:
-    image: wall
-    container_name: wall_service
-    restart: always
-    build:
-      context: ./wall
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-    depends_on: 
-      python_loader:
-        condition: service_healthy
-    networks:
-      - my_network
-    ports:
-      - "9002:8080"
-#    links:
-#      - proxysql:database_server
+#   wall:
+#     image: wall
+#     container_name: wall_service
+#     restart: always
+#     build:
+#       context: ./wall
+#       dockerfile: Dockerfile
+#     environment:
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#     networks:
+#       - my_network
+#     ports:
+#       - "9002:8080"
+# #    links:
+# #      - proxysql:database_server
 
-  user:
-    image: user
-    container_name: user_service
-    restart: always
-    build:
-      context: ./user
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-    depends_on: 
-      python_loader:
-        condition: service_healthy
-    networks:
-      - my_network
-    ports:
-      - "9003:8080"
-#    links:
-#      - proxysql:database_server
+#   user:
+#     image: user
+#     container_name: user_service
+#     restart: always
+#     build:
+#       context: ./user
+#       dockerfile: Dockerfile
+#     environment:
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#     networks:
+#       - my_network
+#     ports:
+#       - "9003:8080"
+# #    links:
+# #      - proxysql:database_server
