--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -190,11 +190,13 @@ services:
     build:
       context: ./test 
       dockerfile: Dockerfile
-    container_name: python_loader
+    container_name: python_test
     command: "test.py"
     networks:
       - my_network
     restart: "no"
     depends_on:
-      user:
-        condition: service_healthy
+      - user
+      - wall 
+      - chat
+        
