--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -4,6 +4,9 @@ project(hl_server C CXX)
 
 SET (EXAMPLE_BINARY "user")
 SET (OTHER_SERVICE "other_service")
+set (REDISCPP_FLAGS "-DREDISCPP_HEADER_ONLY=ON")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall ${REDISCPP_FLAGS}")
+set (CMAKE_CXX_FLAGS_RELEASE "-O3 -g0  -Wall -DNDEBUG ${REDISCPP_FLAGS}")
 
 find_package(OpenSSL)
 find_package(Threads)
@@ -26,7 +29,8 @@ SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(${EXAMPLE_BINARY} main.cpp
                                  config/config.cpp
                                  database/database.cpp
-                                 database/user.cpp)
+                                 database/user.cpp
+                                 database/cache.cpp)
 
 
 target_include_directories(${EXAMPLE_BINARY} PRIVATE "${CMAKE_BINARY_DIR}")
