--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu-poco
 
 WORKDIR /root
+ARG USELESS=1
 RUN git clone https://github.com/alexander-rodionov/Coursework-test.git
 RUN cd Coursework-test/user && mkdir build && cd build && cmake .. && make && cd ../../..
 
