--- a/writer/CMakeLists.txt
+++ b/writer/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.2)
 project(writer)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -17,6 +17,7 @@ set (STD_CXX "c++17")
 set (REDISCPP_FLAGS "-DREDISCPP_HEADER_ONLY=ON")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -std=${STD_CXX} ${REDISCPP_FLAGS}")
 set (CMAKE_CXX_FLAGS_RELEASE "-O3 -g0 -std=${STD_CXX} -Wall -DNDEBUG ${REDISCPP_FLAGS}")
+set (RUNTIME_OUTPUT_DIRECTORY "./build")
 
 add_executable(writer
         config/config.cpp
