--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ networks:
 services:
   ubuntu-poco:
     image: ubuntu-poco
+    container_name: ubuntu-poco
     build: 
       context: .
       dockerfile: Dockerfile_poco
@@ -104,6 +105,7 @@ services:
 
   cache:
     image: redis:6.2-alpine
+    container_name: cache
     restart: always
     ports:
       - '9100:6379'
@@ -116,8 +118,8 @@ services:
     image: 'bitnami/kafka:latest'
     container_name: kafka1
     ports:
-      - "2181:9181"
-      - "9092:9192"
+      - "9181:2181"
+      - "9192:9092"
     environment:
       KAFKA_ENABLE_KRAFT: "yes"
       KAFKA_CFG_PROCESS_ROLES: "broker,controller"
@@ -130,17 +132,21 @@ services:
       ALLOW_PLAINTEXT_LISTENER: "yes"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_KRAFT_CLUSTER_ID: "dh6khitPSDGZSBOjNeTC_g"
-
+      KAFKA_CFG_NODE_ID: 1
     networks:
       - my_network
 
   kafka-ui:
     image: provectuslabs/kafka-ui:v0.4.0
+    container_name: kafka_ui
     ports:
-      - "8888:9080"
+      - "9081:8080"
     environment:
       KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka1:9092"
       KAFKA_CLUSTERS_0_NAME: "kraft"
+    depends_on:
+      kafka1:
+        condition: service_started
     networks:
       - my_network
 
@@ -189,7 +195,7 @@ services:
       python_loader:
         condition: service_completed_successfully
     ports:
-      - "9001:8080"
+      - "9000:8080"
     networks:
       - my_network
 
@@ -273,6 +279,7 @@ services:
 
   test:
     image: py
+    container_name: test
     build:
       context: ./test 
       dockerfile: Dockerfile
