--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -175,89 +175,89 @@ services:
       cache:
         condition: service_started
 
-  writer:
-    image: writer
-    container_name: writer_service
-    restart: always
-    build:
-      context: ./writer
-      dockerfile: Dockerfile
-    environment:      
-      KAFKA_ENABLE_KRAFT: "yes"
-      KAFKA_CFG_PROCESS_ROLES: "broker,controller"
-      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-      KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
-      KAFKA_CFG_ADVERTISED_LISTENERS: "PLAINTEXT://kafka1:9092"
-      KAFKA_BROKER_ID: 1
-      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "1@kafka1:9093"
-      ALLOW_PLAINTEXT_LISTENER: "yes"
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_KRAFT_CLUSTER_ID: "dh6khitPSDGZSBOjNeTC_g"
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-      BOOTSTRAP_SERVERS: "kafka1:9092"
-    depends_on: 
-      python_loader:
-        condition: service_completed_successfully
-    ports:
-      - "9000:8080"
-    networks:
-      - my_network
+#   writer:
+#     image: writer
+#     container_name: writer_service
+#     restart: always
+#     build:
+#       context: ./writer
+#       dockerfile: Dockerfile
+#     environment:      
+#       KAFKA_ENABLE_KRAFT: "yes"
+#       KAFKA_CFG_PROCESS_ROLES: "broker,controller"
+#       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+#       KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
+#       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+#       KAFKA_CFG_ADVERTISED_LISTENERS: "PLAINTEXT://kafka1:9092"
+#       KAFKA_BROKER_ID: 1
+#       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "1@kafka1:9093"
+#       ALLOW_PLAINTEXT_LISTENER: "yes"
+#       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#       KAFKA_KRAFT_CLUSTER_ID: "dh6khitPSDGZSBOjNeTC_g"
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#       BOOTSTRAP_SERVERS: "kafka1:9092"
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#     ports:
+#       - "9000:8080"
+#     networks:
+#       - my_network
 
 
-  chat:
-    image: chat
-    container_name: chat_service
-    restart: always
-    build:
-      context: ./chat
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-    depends_on: 
-      python_loader:
-        condition: service_completed_successfully
-      writer:
-        condition: service_started
-    ports:
-      - "9001:8080"
-    networks:
-      - my_network
-#    links:
-#      - proxysql:database_server
+#   chat:
+#     image: chat
+#     container_name: chat_service
+#     restart: always
+#     build:
+#       context: ./chat
+#       dockerfile: Dockerfile
+#     environment:
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#       writer:
+#         condition: service_started
+#     ports:
+#       - "9001:8080"
+#     networks:
+#       - my_network
+# #    links:
+# #      - proxysql:database_server
 
-  wall:
-    image: wall
-    container_name: wall_service
-    restart: always
-    build:
-      context: ./wall
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: proxysql
-      DB_PORT: 6033
-      DB_LOGIN: user
-      DB_PASSWORD: password
-      DB_DATABASE: db
-    depends_on: 
-      python_loader:
-        condition: service_completed_successfully
-      writer:
-        condition: service_started        
-    networks:
-      - my_network
-    ports:
-      - "9002:8080"
-#    links:
-#      - proxysql:database_server
+#   wall:
+#     image: wall
+#     container_name: wall_service
+#     restart: always
+#     build:
+#       context: ./wall
+#       dockerfile: Dockerfile
+#     environment:
+#       DB_HOST: proxysql
+#       DB_PORT: 6033
+#       DB_LOGIN: user
+#       DB_PASSWORD: password
+#       DB_DATABASE: db
+#     depends_on: 
+#       python_loader:
+#         condition: service_completed_successfully
+#       writer:
+#         condition: service_started        
+#     networks:
+#       - my_network
+#     ports:
+#       - "9002:8080"
+# #    links:
+# #      - proxysql:database_server
 
   user:
     image: user
@@ -273,7 +273,9 @@ services:
       DB_PASSWORD: password
       DB_DATABASE: db
       CACHE: cache:6379
-      CACHE_ENABLED: "TRUE"
+      QUEUE_HOST: kafka1:9092
+      QUEUE_TOPIC: event_server
+      QUEUE_GROUP_ID: 0
     depends_on: 
       python_loader:
         condition: service_completed_successfully
@@ -286,18 +288,18 @@ services:
 #    links:
 #      - proxysql:database_server
 
-  test:
-    image: py
-    build:
-      context: ./test 
-      dockerfile: Dockerfile
-    container_name: python_test
-    command: "test.py"
-    networks:
-      - my_network
-    restart: "no"
-    depends_on:
-      - user
-      - wall 
-      - chat
+#   test:
+#     image: py
+#     build:
+#       context: ./test 
+#       dockerfile: Dockerfile
+#     container_name: python_test
+#     command: "test.py"
+#     networks:
+#       - my_network
+#     restart: "no"
+#     depends_on:
+#       - user
+#       - wall 
+#       - chat
         
