--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -175,38 +175,29 @@ services:
       cache:
         condition: service_started
 
-#   writer:
-#     image: writer
-#     container_name: writer_service
-#     restart: always
-#     build:
-#       context: ./writer
-#       dockerfile: Dockerfile
-#     environment:      
-#       KAFKA_ENABLE_KRAFT: "yes"
-#       KAFKA_CFG_PROCESS_ROLES: "broker,controller"
-#       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-#       KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-#       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
-#       KAFKA_CFG_ADVERTISED_LISTENERS: "PLAINTEXT://kafka1:9092"
-#       KAFKA_BROKER_ID: 1
-#       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "1@kafka1:9093"
-#       ALLOW_PLAINTEXT_LISTENER: "yes"
-#       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#       KAFKA_KRAFT_CLUSTER_ID: "dh6khitPSDGZSBOjNeTC_g"
-#       DB_HOST: proxysql
-#       DB_PORT: 6033
-#       DB_LOGIN: user
-#       DB_PASSWORD: password
-#       DB_DATABASE: db
-#       BOOTSTRAP_SERVERS: "kafka1:9092"
-#     depends_on: 
-#       python_loader:
-#         condition: service_completed_successfully
-#     ports:
-#       - "9000:8080"
-#     networks:
-#       - my_network
+  writer:
+    image: writer
+    container_name: writer_service
+    restart: always
+    build:
+      context: ./writer
+      dockerfile: Dockerfile
+    environment:      
+      DB_HOST: proxysql
+      DB_PORT: 6033
+      DB_LOGIN: user
+      DB_PASSWORD: password
+      DB_DATABASE: db
+      QUEUE_HOST: kafka1:9092
+      QUEUE_TOPIC: event_server
+      QUEUE_GROUP_ID: 0
+    depends_on: 
+      python_loader:
+        condition: service_completed_successfully
+    ports:
+      - "9000:8080"
+    networks:
+      - my_network
 
 
 #   chat:
