--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -200,55 +200,55 @@ services:
       - my_network
 
 
-#   chat:
-#     image: chat
-#     container_name: chat_service
-#     restart: always
-#     build:
-#       context: ./chat
-#       dockerfile: Dockerfile
-#     environment:
-#       DB_HOST: proxysql
-#       DB_PORT: 6033
-#       DB_LOGIN: user
-#       DB_PASSWORD: password
-#       DB_DATABASE: db
-#     depends_on: 
-#       python_loader:
-#         condition: service_completed_successfully
-#       writer:
-#         condition: service_started
-#     ports:
-#       - "9001:8080"
-#     networks:
-#       - my_network
-# #    links:
-# #      - proxysql:database_server
+  chat:
+    image: chat
+    container_name: chat_service
+    restart: always
+    build:
+      context: ./chat
+      dockerfile: Dockerfile
+    environment:
+      DB_HOST: proxysql
+      DB_PORT: 6033
+      DB_LOGIN: user
+      DB_PASSWORD: password
+      DB_DATABASE: db
+    depends_on: 
+      python_loader:
+        condition: service_completed_successfully
+      writer:
+        condition: service_started
+    ports:
+      - "9001:8080"
+    networks:
+      - my_network
+    links:
+      - proxysql:database_server
 
-#   wall:
-#     image: wall
-#     container_name: wall_service
-#     restart: always
-#     build:
-#       context: ./wall
-#       dockerfile: Dockerfile
-#     environment:
-#       DB_HOST: proxysql
-#       DB_PORT: 6033
-#       DB_LOGIN: user
-#       DB_PASSWORD: password
-#       DB_DATABASE: db
-#     depends_on: 
-#       python_loader:
-#         condition: service_completed_successfully
-#       writer:
-#         condition: service_started        
-#     networks:
-#       - my_network
-#     ports:
-#       - "9002:8080"
-# #    links:
-# #      - proxysql:database_server
+  wall:
+    image: wall
+    container_name: wall_service
+    restart: always
+    build:
+      context: ./wall
+      dockerfile: Dockerfile
+    environment:
+      DB_HOST: proxysql
+      DB_PORT: 6033
+      DB_LOGIN: user
+      DB_PASSWORD: password
+      DB_DATABASE: db
+    depends_on: 
+      python_loader:
+        condition: service_completed_successfully
+      writer:
+        condition: service_started        
+    networks:
+      - my_network
+    ports:
+      - "9002:8080"
+    links:
+      - proxysql:database_server
 
   user:
     image: user
@@ -276,21 +276,21 @@ services:
       - my_network
     ports:
       - "9003:8080"
-#    links:
-#      - proxysql:database_server
+    links:
+      - proxysql:database_server
 
-#   test:
-#     image: py
-#     build:
-#       context: ./test 
-#       dockerfile: Dockerfile
-#     container_name: python_test
-#     command: "test.py"
-#     networks:
-#       - my_network
-#     restart: "no"
-#     depends_on:
-#       - user
-#       - wall 
-#       - chat
+  test:
+    image: py
+    build:
+      context: ./test 
+      dockerfile: Dockerfile
+    container_name: python_test
+    command: "test.py"
+    networks:
+      - my_network
+    restart: "no"
+    depends_on:
+      - user
+      - wall 
+      - chat
         
