--- a/Dockerfile_poco
+++ b/Dockerfile_poco
@@ -12,5 +12,7 @@ RUN cd poco && mkdir cmake-build && cd cmake-build && cmake .. && make && make i
 RUN git clone https://github.com/edenhill/librdkafka.git 
 RUN cd librdkafka && ./configure && make && sudo make install && cd ..
 RUN git clone https://github.com/mfontanini/cppkafka 
+RUN cd cppkafka && mkdir build && cd build && cmake .. && make && sudo make install && cd .. && cd .. 
+
 
 
